--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,13 @@ body {
     background-position: center; 
 }
 
+
+@media all and (max-width: 736px) { 
+  body {
+    padding: 0;
+  }  
+ }
+
 .intro, .social-links, .announcement {
     text-align: center;
 }
@@ -28,13 +35,26 @@ body {
   background: #fff;
   border-radius: 2px;
   display: inline-block;
-  height: 550px;
+  height: 80vh;
   margin: 1rem;
   position: relative;
   width: 50%;
   margin: 5% 0px 0px 25%;
-
 }
+
+ @media all and (max-width: 980px) { 
+  .card {
+    width: 70vw;
+    margin: 0 0 0 15vw;
+  }  
+ }
+
+ @media all and (max-width: 736px) {
+  .card {
+    width: 88vw;
+    margin: 0 0 0 6vw;
+  }  
+ }
 
 .card-4 {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
